# nhl_module

./: .clang-format  CMakeLists.txt
.github/workflows/: ci.yml  feature ci.yml
benchmarks/: CMakeLists.txt  math_benchmark.cpp
cmake/: nhlConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  conference.ixx  division.ixx  game.ixx  league.ixx  nhl.ixx  schedule.ixx  standings.ixx  team.ixx  team_record.ixx  temp_std.ixx  text_literals.ixx
src/lottery/: ball.ixx  combination.ixx  combination_table.ixx  combination_value.ixx  lottery.ixx  lottery_print.ixx  lottery_team.ixx  lottery_teams.ixx  machine.ixx  odds.ixx  parameters.ixx  potential_winners.ixx  ranking.ixx  ranking_combinations.ixx  round.ixx  round_winners.ixx  stats.ixx
src/math/: cmath.ixx  percentage.ixx
src/stdex/: functional.ixx  stdex.ixx  type_traits.ixx
tests/: CMakeLists.txt  team_tests.cpp  text_literals_tests.cpp
tests/lottery/: combination_table_tests.cpp  combination_value_tests.cpp  lottery_odds_tests.cpp  ranking_combinations_tests.cpp  ranking_tests.cpp
tests/math/: cmath_tests.cpp
